<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than
        the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
        and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
        in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\’s oldest and deepest
        freshwater lake.</string>
    <string name="question_continents">There are 6 continents on Earth.</string>
    <string name="question_island_australia">Australia is an island.</string>
    <string name="question_penguins">Penguins live at the North pole.</string>
    <string name="question_day">A day is a consequence of the Earth\'s rotation around its
        axis.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>
    <string name="cheat_button">Cheat!</string>
    <string name="restart_button">Restart</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
</resources>
